--- a/index.html
+++ b/index.html
@@ -291,6 +291,24 @@
         </div>
       </div>
 
+      <div class="results">
+        <!-- Card 1 -->
+        <div class="card">
+          <img src="./img/sorbonne-university.webp" alt="Sorbonne University" />
+          <div class="card-content">
+            <div>
+              <h3>Sorbonne Université</h3>
+              <p><strong>Location:</strong> Paris</p>
+              <p><strong>Ranking:</strong> #1 in France</p>
+              <p><strong>Tuition:</strong> €2,800 / year</p>
+              <p><strong>Rating:</strong> ⭐ 4.8 / 5</p>
+            </div>
+            <div class="card-footer">
+              <label><input type="checkbox"> Compare</label>
+              <button>View details</button>
+            </div>
+          </div>
+        </div>
 
         <!-- Card 2 -->
         <div class="card">
