--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
             </div>
             <div class="card-footer">
               <label><input type="checkbox"> Comparer</label>
-              <a class="btn" href="sorbonne.html">Voir les détails</a>
+              <a class="btn" href="psl.html">Voir les détails</a>
             </div>
           </div>
         </div>
@@ -450,7 +450,7 @@
             </div>
             <div class="card-footer">
               <label><input type="checkbox"> Comparer</label>
-              <a class="btn" href="#">Voir les détails</a>
+              <a class="btn" href="lyon.html">Voir les détails</a>
             </div>
           </div>
         </div>
@@ -468,7 +468,7 @@
             </div>
             <div class="card-footer">
               <label><input type="checkbox"> Comparer</label>
-              <a class="btn" href="#">Voir les détails</a>
+              <a class="btn" href="grenoble.html">Voir les détails</a>
             </div>
           </div>
         </div>
@@ -486,7 +486,7 @@
             </div>
             <div class="card-footer">
               <label><input type="checkbox"> Comparer</label>
-              <a class="btn" href="#">Voir les détails</a>
+              <a class="btn" href="aix.html">Voir les détails</a>
             </div>
           </div>
         </div>
