--- a/grenoble.html
+++ b/grenoble.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>UCA — SCHOOLMATCH</title>
+  <title>GRENOBLE — SCHOOLMATCH</title>
   <style>
 :root{
     --orange:#e67049;
